RESOLVED FIXED98533
[BlackBerry] proxy auth regressed
https://bugs.webkit.org/show_bug.cgi?id=98533
Summary [BlackBerry] proxy auth regressed
Joe Mason
Reported 2012-10-05 10:30:50 PDT
After entering a password in the proxy auth dialog, we aren't actually sending that password to the server.
Attachments
fix (2.88 KB, patch)
2012-10-05 10:36 PDT, Joe Mason
no flags
revised fix (2.87 KB, patch)
2012-10-05 11:06 PDT, Joe Mason
no flags
Joe Mason
Comment 1 2012-10-05 10:36:37 PDT
Joe Mason
Comment 2 2012-10-05 11:06:44 PDT
Created attachment 167355 [details] revised fix
Yong Li
Comment 3 2012-10-05 11:09:52 PDT
Comment on attachment 167355 [details] revised fix assume proxyAddress() never return a null string?
WebKit Review Bot
Comment 4 2012-10-05 11:50:01 PDT
Comment on attachment 167355 [details] revised fix Clearing flags on attachment: 167355 Committed r130537: <http://trac.webkit.org/changeset/130537>
WebKit Review Bot
Comment 5 2012-10-05 11:50:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.